Ultima versão orçamentos

--- a/millenium!delca/views-win32/delca.cfg
+++ b/millenium!delca/views-win32/delca.cfg
@@ -31,6 +31,6 @@
 -M
 -$M16384,1048576
 -K$00400000
--E"c:\millenium"
+-E"D:\millennium\fontes\Extensibility\millenium!delca\views-win32"
 -LE"c:\program files (x86)\borland\delphi5\Projects\Bpl"
 -LN"c:\program files (x86)\borland\delphi5\Projects\Bpl"
