Entrada NF Automática

--- a/millenium!saldaoinformatica/schadule/scheduler!saldaoinformatica.ini
+++ b/millenium!saldaoinformatica/schadule/scheduler!saldaoinformatica.ini
@@ -18,3 +18,7 @@ transaction=MILLENIUM!SALDAOINFORMATICA.ACER.IMPORTARFECHAMENTO
 interval=1
 group=css
 
+[FATURANFENTRADA]
+transaction=MILLENIUM!SALDAOINFORMATICA.ORDENS_SERVICO.ENTRADAAUTOMATICA
+interval=1
+
