--- a/millennium!terminal/views-win32/TerminalConsultaPreco.cfg
+++ b/millennium!terminal/views-win32/TerminalConsultaPreco.cfg
@@ -34,3 +34,7 @@
 -E"C:\millenium"
 -LE"c:\program files (x86)\borland\delphi5\Projects\Bpl"
 -LN"c:\program files (x86)\borland\delphi5\Projects\Bpl"
+-U"E:\Dev\Extensibility\millennium!terminal\views-win32\comp"
+-O"E:\Dev\Extensibility\millennium!terminal\views-win32\comp"
+-I"E:\Dev\Extensibility\millennium!terminal\views-win32\comp"
+-R"E:\Dev\Extensibility\millennium!terminal\views-win32\comp"
