--- a/millennium!terminal/views-win32/comp/Install.cfg
+++ b/millennium!terminal/views-win32/comp/Install.cfg
@@ -33,8 +33,8 @@
 -K$00400000
 -LE"c:\program files (x86)\borland\delphi5\Projects\Bpl"
 -LN"c:\program files (x86)\borland\delphi5\Projects\Bpl"
--U"Z:\WDTS\client\common"
--O"Z:\WDTS\client\common"
--I"Z:\WDTS\client\common"
--R"Z:\WDTS\client\common"
+-U"Z:\WDTS\client\common;Z:\WDTS\client\common"
+-O"Z:\WDTS\client\common;Z:\WDTS\client\common"
+-I"Z:\WDTS\client\common;Z:\WDTS\client\common"
+-R"Z:\WDTS\client\common;Z:\WDTS\client\common"
 -Z
