--- a/millenium!saldaoinformatica/schadule/scheduler!saldaoinformatica.ini
+++ b/millenium!saldaoinformatica/schadule/scheduler!saldaoinformatica.ini
@@ -1,7 +1,6 @@
 [IMPORTARARQUIVOSXML]
 transaction=MILLENIUM!SALDAOINFORMATICA.ACER.IMPORTARARQUIVOSXML
-interval=1
-group=css
+interval=5
 
 [IMPORTARORDENS]
 transaction=MILLENIUM!SALDAOINFORMATICA.ACER.IMPORTARORDENS
@@ -18,7 +17,12 @@ transaction=MILLENIUM!SALDAOINFORMATICA.ACER.IMPORTARFECHAMENTO
 interval=1
 group=css
 
+[DONWLOADXML]
+transaction=MILLENIUM!ACER.WS.DONWLOADXML
+interval=1
+group=css
+
 [FATURANFENTRADA]
 transaction=MILLENIUM!SALDAOINFORMATICA.ORDENS_SERVICO.ENTRADAAUTOMATICA
 interval=1
-
+group=css
